tests/transpiler/x/scala/str_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/str_builtin.scala:4: error: not found: value str
        println(str(123))
                ^
one error found
